--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   </head>
 
 	<body>
-		<script src="js/index.js" type="text/javascript"></script>
+		<script src="js/index.js" type="module">
+    </script>
 	</body>
 </html>
